@@ -3,6 +3,8 @@
 ; License GNU General Public License version 2 or later; see LICENSE.txt, see LICENSE.php
 ; Note : All ini files need to be saved as UTF-8 - No BOM
 
+MOD_RELATED_FIELD_MAX_DESC="The maximum number of related articles to display (default is 5)"
+MOD_RELATED_FIELD_MAX_LABEL="Maximum articles"
 MOD_RELATED_FIELD_SHOWDATE_DESC="Show/Hide Date"
 MOD_RELATED_FIELD_SHOWDATE_LABEL="Show Date"
 MOD_RELATED_ITEMS="Articles - Related Articles"
